package analysis;

public class HistogramAnalyzer {

}
