package analysis;

public class PeriodAnalyzer {

}
