package rng;

public class LCG {

}
