package rng;

public class MiddleSquareGenerator {

}
