package rng;

public interface RNG {
    String getName(); 
}
