package rng;

public class RandomSequenceGenerator {

}
