package rng;

public class XORShiftGenerator {

}
