@startuml name
title RNG Projekt - Architektur (Toolchain / Erstes Klassendiagramm)

skinparam classAttributeIconSize 0

' ==========================
' RNG SCHICHT
' ==========================

interface RNG {
    +nextDouble() : double
    +reset(seed : long) : void
    +getName() : String
}

class LCG{
    -name : String
}
class MiddleSquareGenerator{
    -name : String
}
class XORShiftGenerator{
    -name : String
}

RNG <|.. LCG
RNG <|.. MiddleSquareGenerator
RNG <|.. XORShiftGenerator

' ==========================
' DATENGENERIERUNG
' ==========================

class RandomSequenceGenerator {
    +generate(rng : RNG, count : int) : double[]
}

RandomSequenceGenerator --> RNG

' ==========================
' ANALYSE SCHICHT
' ==========================

class HistogramAnalyzer {
    +createHistogram(values : double[], bins : int)
}

class CorrelationAnalyzer {
    +correlation(values : double[]) : double
    +createScatterData(double[] values) : Point[] 
}

class Statistics {
    +mean(values : double[]) : double
    +variance(values : double[]) : double
}

class PeriodAnalyzer {
    +estimatePeriod(rng : RNG, maxIterations : int) : long
}

PeriodAnalyzer --> RNG

' ==========================
' CONTROLLER (BUSINESS LOGIC)
' ==========================

class SimulationController {
    +runSimulation(rng : RNG, sampleSize : int, bins : int) : SimulationResult
}

SimulationController --> RNG
SimulationController --> RandomSequenceGenerator
SimulationController --> HistogramAnalyzer
SimulationController --> CorrelationAnalyzer
SimulationController --> Statistics
SimulationController --> PeriodAnalyzer

' ==========================
' SIMULATION RESULT
' ==========================

class SimulationResult {
    +values : double[]
    +mean : double
    +variance : double
    +correlation : double
    +period : long
}

SimulationController --> SimulationResult

' ==========================
' GUI SCHICHT (VIEW)
' ==========================

class MainFrame {
    +onStartSimulation()
    +updateView()
}

class ControlPanel {
    +getSelectedRNG() : String
    +getSampleSize() : int
    +getBins() : int
}

MainFrame *-- ControlPanel
MainFrame --> SimulationController : triggert Simulation

@enduml